--- a/src/style/partials/_styleCard.scss
+++ b/src/style/partials/_styleCard.scss
@@ -22,8 +22,11 @@
     display: none;
     left: 0;
     top: 20px;
-    text-align: center;
     width: 100%;
+    padding: 5px;
+    overflow-y: auto;
+    height: 90%;
+    scrollbar-width: none;
 
     img {
         width: 25px;
