--- a/src/style/_general.scss
+++ b/src/style/_general.scss
@@ -6,4 +6,10 @@
 body{
   background-color: $background-color-body;
   color: white;
+
+  
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  
 }
